update mockup project add social networks in the footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,41 @@
-<footer class="shadow bg-indigo-800 mt-24">
-    <div class="max-w-2xl max-sm:w-9/12 mx-auto py-2">
+<footer class="max-w-3xl pb-4 px-0 mx-auto max-md:px-8">
+    <div class="w-full bg-indigo-800 rounded-lg mx-auto py-2 px-4">
         <div class="flex justify-between items-center">
-            <a
-                href="/"
-            >
-                <img src="/favicon.png"
-                    class="self-center text-2xl w-10 font-semibold whitespace-nowrap dark:text-white"
-                    />
+            <a href="/" class="flex items-center max-sm:text-sm whitespace-nowrap gap-2 font-medium text-slate-200">
+                <img
+                    src="/favicon.png"
+                    class="self-center w-8 max-sm:w-6 font-semibold"
+                />
+                Creado por Busid
             </a>
-            <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">Hecho con ❤️ en Astro.</span>
+            <ul
+                class="flex gap-x-4 max-sm:gap-x-3 items-center font-medium text-slate-200 sm:mt-0"
+            >
+                <li>
+                    <a
+                        href="https://github.com/Busid1"
+                        target="_blank"
+                        class="hover:underline"
+                        ><i class="fab fa-github text-lg max-sm:text-sm"></i></a
+                    >
+                </li>
+                <li>
+                    <a
+                        href="https://www.linkedin.com/in/busid/"
+                        target="_blank"
+                        class="hover:underline"
+                        ><i class="fab fa-linkedin text-lg max-sm:text-sm"></i></a
+                    >
+                </li>
+                <li>
+                    <a
+                        href="https://busid.netlify.app/"
+                        target="_blank"
+                        class="hover:underline"
+                        ><i class="fas fa-globe text-lg max-sm:text-sm"></i></a
+                    >
+                </li>
+            </ul>
         </div>
     </div>
 </footer>
