--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -19,7 +19,7 @@ const {
 ---
 
 <div
-    class="m-0 flex-col rounded-xl shadow-xl dark:bg-gray-900 transition duration-200 p-4"
+    class="m-0 flex flex-col rounded-xl shadow-xl dark:bg-gray-900 transition duration-200 p-4"
 >
     <a href={projectLink} target="_blank" class="relative z-10 group">
         <img
@@ -37,18 +37,20 @@ const {
             </div>
         </div>
     </a>
-    <div class="block py-4 px-2 rounded-b-md w-full">
-        <a
-            href={projectLink}
-            target="_blank"
-            class="text-2xl font-bold hover:underline text-gray-900 dark:text-white"
-        >
-            {projectTitle}
-        </a>
-        <p class="mt-2 font-normal text-gray-700 dark:text-gray-400">
-            {projectDescription}
-        </p>
-        <div class="flex-col gap-3 mt-3">
+    <div class="flex flex-col justify-between py-4 px-2 rounded-b-md w-full h-full">
+        <div>
+            <a
+                href={projectLink}
+                target="_blank"
+                class="text-2xl font-bold hover:underline text-gray-900 dark:text-white"
+            >
+                {projectTitle}
+            </a>
+            <p class="mt-2 font-normal text-gray-700 dark:text-gray-400">
+                {projectDescription}
+            </p>
+        </div>
+        <div class="flex flex-col mt-3">
             <span class="text-white font-medium">Tecnologías empleadas:</span>
             <div class="flex flex-wrap gap-3 mt-3">
                 {
