--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,10 +1,9 @@
 ---
 import SectionHeader from "./SectionHeader.astro"
 ---
-<div class="xs:pt-5 sm:pt-10" id="contact">
+<div class="xs:pt-5 sm:pt-10 mb-20" id="contact">
 	<SectionHeader text="Contacto"/>
     <div class="flex flex-col gap-4">
         <span class="dark:text-white">Correo electrónico: busid30@gmail.com</span>
-        <span class="dark:text-white">Teléfono móvil: +34 633 37 97 52</span>
     </div>
 </div>
