--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Experience from "../components/Experience.astro";
 	<main
 		class="absolute top-0 z-[-2] h-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))] w-full"
 	>
-		<div class="max-w-2xl max-md:w-9/12 mx-auto flex flex-col gap-5">
+		<div class="max-w-3xl max-md:px-8 mx-auto flex flex-col gap-5">
 			<Header />
 			<About />
 			<Experience />
