--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer class="max-w-3xl pb-4 px-0 mx-auto max-md:px-8">
-    <div class="w-full bg-indigo-800 rounded-lg mx-auto py-2 px-4">
+    <div class="w-full bg-indigo-800 rounded-xl mx-auto py-2 px-4">
         <div class="flex justify-between items-center">
             <a href="/" class="flex items-center max-sm:text-sm whitespace-nowrap gap-2 font-medium text-slate-200">
                 <img
