add title project

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -48,7 +48,7 @@ import SectionHeader from "./SectionHeader.astro";
 		/>
 		<div class="flex max-sm:flex-col gap-5">
 			<Card
-				projectTitle="CutLink"
+				projectTitle="Acortador de URL - CutLink"
 				projectDescription="Su función es simple, introduce un enlace largo en el campo, haz click en el boton shorten y este te proporciona un enlace más corto que te redirigira al mismo sitio que el enlace largo"
 				projectFrontPage="/cutlink.png"
 				projectSkills={[
@@ -60,7 +60,7 @@ import SectionHeader from "./SectionHeader.astro";
 				projectLink="https://cut-ly.vercel.app/"
 			/>
 			<Card
-				projectTitle="GameVortex"
+				projectTitle="API de videojuegos - GameVortex"
 				projectFrontPage="/gamevortex-mockup.png"
 				projectDescription="E-commerce de videojuegos, desarrollado con React y gestionado con Redux. Consume una API REST para la interacción con los datos, mientras que los usuarios y la información de productos se almacenan en Cloud Firestore. Además, los pagos se procesan mediante la integración de Stripe."
 				projectSkills={[
